8305990: Stripping debug info of ASM 9.5 fails